@@ -578,4 +578,14 @@
          handler="bika.lims.upgrade.to320.upgrade"
          sortkey="1"
          profile="bika.lims:default"/>
+
+ <genericsetup:upgradeStep
+         title="Upgrade to Bika LIMS 3.3.0"
+         description="This is the upgrade step to drive bikaLIMS ot 3.3.0 version."
+         source="320"
+         destination="330"
+         handler="bika.lims.upgrade.to330.upgrade"
+         sortkey="1"
+         profile="bika.lims:default"/>
+
 </configure>
